<resources>
    <string name="app_name">INERTIA</string>
    <string name="login">Login</string>
    <string name="desc_login">Silakan melakukan login untuk melanjutkan</string>
    <string name="phone">No. Handphone (081234567890)</string>
    <string name="desc_account">Belum memiliki akun?</string>
    <string name="register">Daftar</string>
    <string name="desc_register">Silahkan mendaftar ini untuk melanjutkan</string>
    <string name="user_name">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="city">Kota / Kab</string>
    <string name="home">Beranda</string>
    <string name="report">Lapor</string>
    <string name="profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_weather_info">Cuaca hari ini</string>
    <string name="bencana_label">Waspada bencana di sekitar anda</string>
    <string name="terbaru">Baru - baru ini</string>
    <string name="terdekat">Terdekat dari posisimu</string>
    <string name="spinner_item">Spinner Item</string>
    <string name="temp">%1$.2f °C</string>
    <string name="cloud">%1$d %%</string>
    <string name="wind">%1$.2fm/s</string>
    <string name="humidity">%1$d UV</string>
    <string name="greetings">Hallo</string>
    <string name="detail_label">Isi form berikut ini untuk membuat laporan</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="deskripsi_laporan">Deskripsi Laporan</string>
    <string name="kirim">Kirim</string>
    <string name="profil">Profil</string>
    <string name="nama">Nama Saya</string>
    <string name="nohp">08232548743</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="laporanmu">Laporanmu</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="kritik_saran">Kritik dan Saran</string>
    <string name="logout">Logout</string>
    <string name="lapor">Lapor</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="silakan_login">Silakan Login</string>
    <string name="verifikasi_desc">Silahkan masukkan kode yang dikirim pada Whatsapp anda untuk melanjutkan menggunakan aplikasi</string>
    <string name="empty_verification">-</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="tidak_menerima_kode">Tidak menerima kode? </string>
    <string name="lokasi">Lokasi</string>
    <string name="status">Status</string>
    <string name="kategori">Kategori</string>
    <string name="nama_bencana">Nama Bencana</string>
    <string name="assessment">Penilaian</string>
    <string name="report_sektor">Pelaporan Sektor</string>
    <string name="desc_assessment_label">Identitas Warga Terdampak</string>
    <string name="address">Alamat</string>
    <string name="desc_report_kriteria_label">Penilaian Kriteria</string>
    <string name="label_kriteria1">Keadaan Bangunan</string>
    <string name="name">Nama</string>
    <string name="jenisbencana">Jenis Bencana</string>
    <string name="hasil">Tingkat Kerusakan</string>
    <string name="label_kriteria2">Keadaan Struktur Bangunan</string>
    <string name="label_kriteria3">Kondisi Fisik Bangunan</string>
    <string name="label_kriteria4">Fungsi Bangunan</string>
    <string name="label_kriteria5">Keadaan Lainnya</string>
    <string name="subsektor">Sub Sektor</string>
    <string name="jenisBencana">Jenis Bencana</string>
    <string name="provinsi">Provinsi</string>
    <string name="warga_terdampak">Warga Terdampak</string>
    <string name="sub_sektor">Sub Sektor</string>
    <string name="waktu_bencana">Waktu Bencana</string>
    <string name="tanggal_bencana">Tanggal Bencana</string>
    <string name="koordinat">Koordinat</string>
    <string name="crowdfunding">Crowdfunding</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibTF5NHJ1NSIsImEiOiJja3Bld3pubGIxcXk1MnFvMW5yN25nY2FyIn0.j9Ji_cGQ-t7VXuLpoN9VPQ</string>
</resources>