<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".ui.form.FormActivity">

    <ImageView
        android:id="@+id/img_laporan"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/report" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama_bencana_form_layout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/judul_laporan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_nama_bencana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deskripsi_layout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/deskripsi_laporan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_label"
        app:layout_constraintTop_toBottomOf="@+id/nama_bencana_form_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_deksripsi_laporan_bencana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/detail_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/detail_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_laporan" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/button_bg"
        android:text="@string/kirim"
        android:id="@+id/btn_kirim"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lokasi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/koordinat"
        app:layout_constraintStart_toStartOf="@+id/deskripsi_layout"
        app:layout_constraintTop_toBottomOf="@+id/deskripsi_layout" />

    <TextView
        android:id="@+id/tv_koordinat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/lokasi_label"
        app:layout_constraintTop_toBottomOf="@+id/lokasi_label" />

</androidx.constraintlayout.widget.ConstraintLayout>