<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/img_detail_laporan"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:contentDescription="@string/report"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_nama_bencana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nama_bencana"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/deskripsi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_laporan">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Body"
            android:textColor="@color/grey"
            android:text="@string/deskripsi_laporan" />

        <TextView
            android:id="@+id/tv_isi_deskripsi"
            android:layout_width="match_parent"
            style="@style/Text.Body"
            tools:text="Ini Deskripsi laporan"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lokasi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kategori_layout">

        <TextView
            style="@style/Text.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_lokasi"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Ini contoh lokasi" />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/crowdfunding_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lokasi_layout">

        <TextView
            style="@style/Text.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crowdfunding"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_crowdfunding"
            style="@style/Text.Body"
            android:textColor="@color/white"
            android:text="@string/klik_disini"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kategori_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskripsi_layout">

        <TextView
            style="@style/Text.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_kategori"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Contoh teks" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>