<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:layout_marginTop="16dp"
        style="@style/Text.Title"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:shapeAppearanceOverlay="@style/CircleImageView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                style="@style/Text.Body"
                android:textStyle="bold"
                android:id="@+id/tv_user_nama"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nohp"
                style="@style/Text.Body"
                android:id="@+id/tv_user_no_hp"/>

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>