<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailassessment.DetailAssessmentActivity">

    <TextView
        android:id="@+id/label_report"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/report_sektor"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_data_report"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/desc_assessment_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/label_report"
        app:layout_constraintTop_toBottomOf="@+id/label_report" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_data_report">

        <TextView
            android:id="@+id/label_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name"
            android:textSize="12sp" />

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/label_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/address"
            android:textSize="12sp" />

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/tv_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/address" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/label_provinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/provinsi"
            android:textSize="12sp" />

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/tv_provinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/provinsi" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/label_kota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/city"
            android:textSize="12sp" />

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/tv_kota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/city" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/label_jenis_bencana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/jenisbencana"
            android:textSize="12sp" />

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/tv_jenisbencana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/jenisbencana" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/label_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hasil"
            android:textSize="12sp" />

        <TextView
            android:paddingTop="8dp"
            android:id="@+id/tv_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#202020"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hasil" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>